--- a/week-3/day2/index.html
+++ b/week-3/day2/index.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>hello</h1>
+    <div class="container">
+        <div class="navbar">
+            <div class="logo">Wanderlust</div>
+            <div class="links">
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">Our Story</a>
+                <a href="">Our Members</a>
+                <a href="">Gallery</a>
+                <a style="color: white;" href="">Contact</a>
+
+            </div>
+        </div>
+
+        <div class="outer">
+            <div class="hero">
+            <h1>Explore The  World With Us</h1>
+            <p>Your journey begins here</p>
+            <button >Discover Now</button>
+        </div>
+        </div>
+
+    </div>
 </body>
 </html>
