--- a/week-3/day2/index.html
+++ b/week-3/day2/index.html
@@ -1,34 +1,73 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
     <div class="container">
-        <div class="navbar">
-            <div class="logo">Wanderlust</div>
-            <div class="links">
-                <a href="">Home</a>
-                <a href="">About</a>
-                <a href="">Our Story</a>
-                <a href="">Our Members</a>
-                <a href="">Gallery</a>
-                <a style="color: white;" href="">Contact</a>
-
-            </div>
+      <div class="navbar">
+        <div class="logo">Wanderlust</div>
+        <div class="links">
+          <a href="">Home</a>
+          <a href="">About</a>
+          <a href="">Our Story</a>
+          <a href="">Our Members</a>
+          <a href="">Gallery</a>
+          <a style="color: white" href="">Contact</a>
         </div>
+      </div>
 
-        <div class="outer">
-            <div class="hero">
-            <h1>Explore The  World With Us</h1>
-            <p>Your journey begins here</p>
-            <button >Discover Now</button>
+      <div class="outer">
+        <div class="hero">
+          <h1>Explore The World With Us</h1>
+          <p>Your journey begins here</p>
+          <button>Discover Now</button>
         </div>
-        </div>
-
+      </div>
     </div>
-</body>
+
+    <div class="destination">
+      <h5>Top Destination</h5>
+      <br />
+      <div class="cards">
+        <div class="card">
+          <img
+            src="https://images.pexels.com/photos/33315262/pexels-photo-33315262.jpeg"
+            alt=""
+          />
+          <div class="content">
+            <h6>Paris, France</h6>
+            <p>The city of lights, romance, and culture.</p>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://images.pexels.com/photos/33315262/pexels-photo-33315262.jpeg"
+            alt=""
+          />
+          <div class="content">
+            <h6>Bali, Indonesia</h6>
+            <p>A tropical paradise for your soul and senses.</p>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://images.pexels.com/photos/33315262/pexels-photo-33315262.jpeg"
+            alt=""
+          />
+          <h6>New York, USA</h6>
+          <p>The city that never sleeps.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="about">
+        <div class="texts">
+            <p>About Us</p>
+        </div>
+    </div>
+  </body>
 </html>
