--- a/week-3/day2/index.html
+++ b/week-3/day2/index.html
@@ -7,67 +7,221 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="navbar">
-        <div class="logo">Wanderlust</div>
-        <div class="links">
-          <a href="">Home</a>
-          <a href="">About</a>
-          <a href="">Our Story</a>
-          <a href="">Our Members</a>
-          <a href="">Gallery</a>
-          <a style="color: white" href="">Contact</a>
-        </div>
-      </div>
-
-      <div class="outer">
-        <div class="hero">
-          <h1>Explore The World With Us</h1>
-          <p>Your journey begins here</p>
-          <button>Discover Now</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="destination">
-      <h5>Top Destination</h5>
-      <br />
-      <div class="cards">
-        <div class="card">
-          <img
-            src="https://images.pexels.com/photos/33315262/pexels-photo-33315262.jpeg"
-            alt=""
-          />
-          <div class="content">
-            <h6>Paris, France</h6>
-            <p>The city of lights, romance, and culture.</p>
+    <div class="headDiv">
+        <div class="navbar">
+          <div class="logo">Wanderlust</div>
+          <div class="links">
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">Our Story</a>
+            <a href="">Our Members</a>
+            <a href="">Gallery</a>
+            <a href="">Contact</a>
           </div>
         </div>
-        <div class="card">
-          <img
-            src="https://images.pexels.com/photos/33315262/pexels-photo-33315262.jpeg"
-            alt=""
-          />
-          <div class="content">
-            <h6>Bali, Indonesia</h6>
-            <p>A tropical paradise for your soul and senses.</p>
+      <div class="container">
+        
+
+        <div class="outer">
+          <div class="hero">
+            <h1>Explore The World With Us</h1>
+            <p>Your journey begins here</p>
+            <button>Discover Now</button>
           </div>
         </div>
-        <div class="card">
-          <img
-            src="https://images.pexels.com/photos/33315262/pexels-photo-33315262.jpeg"
-            alt=""
-          />
-          <h6>New York, USA</h6>
-          <p>The city that never sleeps.</p>
+      </div>
+
+      <div class="destination">
+        <h5>Top Destination</h5>
+        <br />
+        <div class="cards">
+          <div class="card">
+            <img
+              src="https://images.pexels.com/photos/33315262/pexels-photo-33315262.jpeg"
+              alt=""
+            />
+            <div class="content">
+              <h6>Paris, France</h6>
+              <p>The city of lights, romance, and culture.</p>
+            </div>
+          </div>
+          <div class="card">
+            <img
+              src="https://images.pexels.com/photos/33315262/pexels-photo-33315262.jpeg"
+              alt=""
+            />
+            <div class="content">
+              <h6>Bali, Indonesia</h6>
+              <p>A tropical paradise for your soul and senses.</p>
+            </div>
+          </div>
+          <div class="card">
+            <img
+              src="https://images.pexels.com/photos/33315262/pexels-photo-33315262.jpeg"
+              alt=""
+            />
+            <h6>New York, USA</h6>
+            <p>The city that never sleeps.</p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="about">
+      <div class="about">
         <div class="texts">
-            <p>About Us</p>
+          <p>About Us</p>
         </div>
+
+        <div class="boxImage">
+          <div class="div1">
+            <p>
+              At Wanderlust Travels, we believe every journey should be
+              unforgettable. With over 10 years of experience, we curate
+              personalized travel experiences tailored to your dreams.
+            </p>
+            <br />
+            <p>
+              From luxurious beach resorts to offbeat mountain trails, we have
+              it all covered for your next adventure.
+            </p>
+          </div>
+          <div class="div2">
+            <img
+              src="https://images.pexels.com/photos/33315262/pexels-photo-33315262.jpeg"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="package">
+        <div class="travelText">
+          <p>Travel Packages</p>
+        </div>
+        <div class="priceCard">
+          <div class="pcard1">
+            <div class="content">
+              <p
+                style="
+                  text-align: center;
+                  font-size: 25px;
+                  font-weight: 600;
+                  padding: 5px;
+                "
+              >
+                Budget Explorer
+              </p>
+              <p style="font-size: 18px">
+                Perfect for solo travelers or students looking for great value
+                adventures.
+              </p>
+              <p
+                style="
+                  padding: 10px;
+                  text-align: center;
+                  color: blue;
+                  font-size: 20px;
+                  font-weight: 700;
+                "
+              >
+                $499
+              </p>
+            </div>
+          </div>
+          <div class="pcard1">
+            <div class="content">
+              <p
+                style="
+                  text-align: center;
+                  font-weight: 600;
+                  padding: 5px;
+                  font-size: 25px;
+                "
+              >
+                Couples Retreat
+              </p>
+              <p style="font-size: 18px">
+                A romantic getaway with your partner in exotic destinations.
+              </p>
+              <p
+                style="
+                  padding: 10px;
+                  text-align: center;
+                  color: blue;
+                  font-size: 20px;
+                  font-weight: 700;
+                "
+              >
+                $999
+              </p>
+            </div>
+          </div>
+          <div class="pcard1">
+            <div class="content">
+              <p
+                style="
+                  text-align: center;
+                  font-weight: 600;
+                  padding: 5px;
+                  font-size: 25px;
+                "
+              >
+                Luxury Package
+              </p>
+              <p style="font-size: 18px">
+                5-star stays, private guides, and everything first-class.
+              </p>
+              <p
+                style="
+                  padding: 10px;
+                  text-align: center;
+                  color: blue;
+                  font-size: 20px;
+                  font-weight: 700;
+                "
+              >
+                $1999
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="testimonial">
+        <div class="say">
+          <p>What Our Travelers Say</p>
+        </div>
+        <div class="testcard">
+          <div class="first">
+            <div class="inner">
+              <p style="font-size: 22px">
+                "Best travel experience ever! Everything was perfectly
+                arranged."
+              </p>
+              <p style="color: grey; font-size: 22px">--Ananya Gupta</p>
+            </div>
+          </div>
+          <div class="first">
+            <div class="inner">
+              <p style="font-size: 22px">
+                "We loved every minute of our Bali trip. Will book again!"
+              </p>
+              <p style="color: grey; font-size: 22px">--Rohan Mehta</p>
+            </div>
+          </div>
+          <div class="first">
+            <div class="inner">
+              <p style="font-size: 22px">
+                "Highly professional team and amazing service."
+              </p>
+              <p style="color: grey; font-size: 22px">--Sarah Khan</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="bottom">
+        <p>&#169;2025 Wanderlust Travels. All Rights Reserved.</p>
+      </div>
     </div>
   </body>
 </html>
