--- a/week-4/day1/fuel.html
+++ b/week-4/day1/fuel.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="fuel.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="bg-container">
+
+            <div class="div1 car"><img src="./img/blue car.png"></div>
+            <div class="div2 car"><img src="./img/red.png"></div>
+            <div class="div3 car"><img src="./img/bus.png"></div>
+            <div class="div4 car"><img src="./img/skyblue.png"></div>
+
+        </div>
+    </div>
 </body>
 </html>
