--- a/week-2/day5/Assignment.html
+++ b/week-2/day5/Assignment.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,32 +8,29 @@
   </head>
   <body>
     <div class="container">
+      <div class="header">
+        <h1>&lt;header&gt;</h1>
+      </div>
 
-      
-        <div class="header">
-          <h1>&lt;header&gt;</h1>
-        </div>
+      <div class="nav">
+        <h1>&lt;nav&gt;</h1>
+      </div>
 
-        <div class="nav">
-          <h1>&lt;nav&gt;</h1>
-        </div>
-
-        <div class="second">
-          <div class="left">
-            <div class="up">
-              <h1>&lt;section&gt;</h1>
-            </div>
-            <div class="down">
-              <h1>&lt;article&gt;</h1>
-            </div>
+      <div class="second">
+        <div class="left">
+          <div class="up">
+            <h1>&lt;section&gt;</h1>
           </div>
-          <div class="right"><h1>&lt;aside&gt;</h1></div>
+          <div class="down">
+            <h1>&lt;article&gt;</h1>
+          </div>
         </div>
+        <div class="right"><h1>&lt;aside&gt;</h1></div>
+      </div>
 
-        <div class="footer">
-          <h1>&lt;footer&gt;</h1>
-        </div>
-      
+      <div class="footer">
+        <h1>&lt;footer&gt;</h1>
+      </div>
     </div>
   </body>
 </html>
