--- a/week-4/day6/test2.html
+++ b/week-4/day6/test2.html
@@ -9,6 +9,10 @@
       rel="stylesheet"
     />
     <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
       .box {
         background: #32ff32;
         border: 2px solid #222;
@@ -22,46 +26,48 @@
       .h-260px {
         height: 260px;
       }
-      .outer{
+      .outer {
         outline: 5px solid black;
         margin: 40px;
       }
-      
+      wid {
+        width: 100px;
+      }
     </style>
   </head>
   <body>
-      <div class="outer">
-        <div class="container-fluid p-5 ">
-      <div class="row mb-3">
-        <div class="col-12 box h-120px">Header</div>
-      </div>
-
-      <div class="row mb-3">
-        <div class="col-2">
-          <div class="box h-260px">Side Bar</div>
+    <div class="outer">
+      <div class="container-fluid p-3">
+        <div class="row mb-3 ">
+          <div class="col-12 box h-120px">Header</div>
         </div>
 
-        <div class="col-10">
-          <div class="row mb-3">
-            <div class="col-12 box h-120px">Content 1</div>
+        <div class="row mb-3 g-2">
+          <div class="col-2">
+            <div class="box h-260px">Side Bar</div>
           </div>
 
-          <div class="row">
-            <div class="col-6">
-              <div class="box h-120px">Content 2</div>
+          <div class="col-10">
+            <div class="row mb-3 g-0">
+              <div class="col-12 box h-120px">Content 1</div>
             </div>
-            <div class="col-6">
-              <div class="box h-120px">Content 3</div>
+
+            <div class="row g-2">
+              <div class="col-6">
+                <div class="box h-120px">Content 2</div>
+              </div>
+              <div class="col-6">
+                <div class="box h-120px">Content 3</div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="col-12 box h-120px">Footer</div>
+        <div class="row">
+          <div class="col-12 box h-120px">Footer</div>
+        </div>
       </div>
     </div>
-      </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
