--- a/week6/day2/GuessGame.html
+++ b/week6/day2/GuessGame.html
@@ -11,22 +11,19 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="container text-center">
-        <div class="row align-items-center">
-          <div class="col-12">
-            <h1>Guess the movie</h1>
-          </div>
-        </div>
+       
+        <div class="row">
+            <div class="col-12 d-flex justify-content-center flex-column align-items-center">
+                <h2>Guess The Movie</h2>
 
-        <div class="row mb-5">
-          <div class="col d-flex justify-content-center">
-            <ul>
-              <li>Its a horror movie</li>
-              <li>Its a bollywood movie</li>
-              <li>Its released in 2008</li>
-              <li>Starring Adah Sharma</li>
-            </ul>
-          </div>
+                <ul>
+                    <li>Its a horror Movie.</li>
+                    <li>Its a bollywood Movie.</li>
+                    <li>It released in 2008.</li>
+                    <li>Staring Adah Sharma.</li>
+                </ul>
+
+            </div>
         </div>
 
         <div class="container text-center">
