--- a/week6/day2/GuessGame.html
+++ b/week6/day2/GuessGame.html
@@ -11,19 +11,18 @@
   </head>
   <body>
     <div class="container-fluid">
-       
-        <div class="row">
-            <div class="col-12 d-flex justify-content-center flex-column align-items-center">
-                <h2>Guess The Movie</h2>
+      <div class="row">
+        <div
+          class="col-12 d-flex justify-content-center flex-column align-items-center"
+        >
+          <h2>Guess The Movie</h2>
 
-                <ul>
-                    <li>Its a horror Movie.</li>
-                    <li>Its a bollywood Movie.</li>
-                    <li>It released in 2008.</li>
-                    <li>Staring Adah Sharma.</li>
-                </ul>
-
-            </div>
+          <ul>
+            <li>Its a horror Movie.</li>
+            <li>Its a bollywood Movie.</li>
+            <li>It released in 2008.</li>
+            <li>Staring Adah Sharma.</li>
+          </ul>
         </div>
 
         <div class="container text-center">
@@ -86,7 +85,7 @@
                 id="one"
                 maxlength="1"
                 oninput="checkOne()"
-                style="text-align: center;"
+                style="text-align: center"
               />
             </div>
           </div>
@@ -98,7 +97,7 @@
                 id="two"
                 maxlength="1"
                 oninput="checkNine()"
-                style="text-align: center;"
+                style="text-align: center"
               />
             </div>
           </div>
@@ -110,7 +109,7 @@
                 id="three"
                 maxlength="1"
                 oninput="checkEight()"
-                style="text-align: center;"
+                style="text-align: center"
               />
             </div>
           </div>
@@ -122,14 +121,15 @@
                 id="four"
                 maxlength="1"
                 oninput="checkZero()"
-                style="text-align: center;"
+                style="text-align: center"
               />
             </div>
           </div>
         </div>
-
-        <button class="btn btn-danger mt-4" onclick="clearAll()">Clear</button>
       </div>
+    </div>
+    <div class="container text-center">
+      <button class="btn btn-danger mt-4" onclick="clearAll()">Clear</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
