completed pending tasks

--- a/week6/day3/Clock/Clock.html
+++ b/week6/day3/Clock/Clock.html
@@ -35,9 +35,6 @@
         font-weight: 600;
         color: rgba(240, 248, 255, 0.633);
       }
-      .padLeft{
-        padding-left: 80px;
-      }
      
     </style>
   </head>
@@ -45,14 +42,14 @@
     <div class="container py-5">
       <div class="row">
         <div class="col">
-          <div class="padLeft">
+          <div>
             <a class="link" href="#">Digital Clock Home</a>
             <br />
             <a class="link" href="#">Back</a>
           </div>
         </div>
 
-        <div class="col text-end pe-5 mt-3  ">
+        <div class="col text-end mt-3  ">
           <button class="button1 btn btn-primary" id="btn24" type="button">24h</button>
           <button class="button2 btn btn-primary" id="btn12"  type="button">
             12h
@@ -64,7 +61,7 @@
         <div>
           <p class="light">Online Digital clock<br />Computer Time:</p>
           <div id="clockTime" class="size text-dark">12:26:34 pm</div>
-          <div id="clockDate" class="mt-3">Monday, 22 December 2025</div>
+          <div id="clockDate" class="mt-3">Thursday, 12 January 2026</div>
         </div>
       </div>
     </div>
