--- a/week7/day1/form.html
+++ b/week7/day1/form.html
@@ -13,7 +13,7 @@
     <style>
       body {
         min-height: 100vh;
-        background: linear-gradient(135deg, #f8f9fa, #e9ecef);
+        background: rgb(121, 172, 205);
       }
 
       .box {
